--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
@@ -68,6 +69,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/editorjs__header": "^2.6.0",
     "@types/lodash.debounce": "^4.0.7"
   }
