--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@uploadthing/react": "^6.7.2",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
@@ -62,6 +63,7 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.44.2",
     "react-textarea-autosize": "^8.4.1",
     "server-only": "^0.0.1",
