--- a/package.json
+++ b/package.json
@@ -34,12 +34,17 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.11",
+    "@types/bcrypt": "^5.0.2",
+    "@types/editorjs__header": "^2.6.0",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/react-google-recaptcha": "^2.1.9",
     "@uploadthing/react": "^6.7.2",
     "@upstash/redis": "^1.21.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
@@ -73,10 +78,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "uploadthing": "^6.13.2",
-    "zod": "^3.21.4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/editorjs__header": "^2.6.0",
-    "@types/lodash.debounce": "^4.0.7"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.2.0"
