--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "18.2.4",
     "@types/react-google-recaptcha": "^2.1.9",
     "@uploadthing/react": "^6.7.2",
+    "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.21.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
