--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.1.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
@@ -49,6 +49,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
+    "chess.js": "^1.2.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -64,6 +65,7 @@
     "postcss": "^8.4.23",
     "prisma": "^4.14.1",
     "react": "^18.3.1",
+    "react-chessboard": "^4.7.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
